// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Header component can accept custom colors 1`] = `
.c1 {
  display: inline-block;
  font-family: GentiumPlus,serif;
}

.c0 {
  background-color: pink;
  color: wheat;
}

.c0 h1 {
  margin: 0;
  font-size: 2rem;
}

<header
  class="c0"
>
  <h1>
    GlyphWorks
     
    <span
      class="c1"
    >
      [ɡlɪfwɜ˞ks]
    </span>
  </h1>
</header>
`;

exports[`The Header component can display a custom title 1`] = `
.c1 {
  display: inline-block;
  font-family: GentiumPlus,serif;
}

.c0 {
  background-color: #621818;
  color: #fff7d4;
}

.c0 h1 {
  margin: 0;
  font-size: 2rem;
}

<header
  class="c0"
>
  <h1>
    Custom Title
     
    <span
      class="c1"
    >
      some IPA
    </span>
  </h1>
</header>
`;

exports[`The Header component can display a default title 1`] = `
.c1 {
  display: inline-block;
  font-family: GentiumPlus,serif;
}

.c0 {
  background-color: #621818;
  color: #fff7d4;
}

.c0 h1 {
  margin: 0;
  font-size: 2rem;
}

<header
  class="c0"
>
  <h1>
    GlyphWorks
     
    <span
      class="c1"
    >
      [ɡlɪfwɜ˞ks]
    </span>
  </h1>
</header>
`;
